# practicaHerramientasIA

./: .gitignore  Dockerfile  README.md  app.py  database.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  schemas.py  seed_data.py
data/: gimnasios.json  listado_gimnasios.xlsx
design-concepts/: ponte-cachas-redesign.html
scripts/: check_dependencies.py  init_db.py  seed_db.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
