[project]
name = "ponte-cachas-portal"
version = "0.3.2"
description = "Portal de gimnasios con FastAPI, PostgreSQL y SQLAlchemy"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "email-validator>=2.2,<3.0",
  "fastapi==0.128.2",
  "jinja2>=3.1.5,<4.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.uv]
default-index = "https://pypi.org/simple"
